--- a/src/main/resources/com/mycompany/tictactoe/views/GamePlay.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/GamePlay.fxml
@@ -35,7 +35,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Label text="You vs AI" textFill="#cffafe">
+                  <Label fx:id="title" text="You vs AI" textFill="#cffafe">
                       <font><Font size="14.0" /></font>
                    </Label>
                </children>
@@ -45,7 +45,7 @@
                <children>
                   <VBox alignment="CENTER" prefHeight="70.0" prefWidth="80.0" style="-fx-border-color: #f9a8d4; -fx-border-radius: 12; -fx-border-width: 2; -fx-background-color: rgba(255,255,255,0.05); -fx-background-radius: 12;">
                      <children>
-                        <Label text="You" textFill="#f9a8d4"><font><Font name="System Bold" size="12.0" /></font></Label>
+                        <Label fx:id="player1" text="You" textFill="#f9a8d4"><font><Font name="System Bold" size="12.0" /></font></Label>
                         <Label fx:id="playerScore" text="0" textFill="WHITE"><font><Font name="System Bold" size="18.0" /></font></Label>
                         <Label text="O" textFill="#f9a8d4"><font><Font name="System Bold" size="14.0" /></font></Label>
                      </children>
@@ -62,7 +62,7 @@
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="70.0" prefWidth="80.0" style="-fx-border-color: #67e8f9; -fx-border-radius: 12; -fx-border-width: 2; -fx-background-color: rgba(255,255,255,0.05); -fx-background-radius: 12;">
                      <children>
-                        <Label text="AI" textFill="#67e8f9"><font><Font name="System Bold" size="12.0" /></font></Label>
+                        <Label fx:id="player2" text="AI" textFill="#67e8f9"><font><Font name="System Bold" size="12.0" /></font></Label>
                         <Label fx:id="aiScore" text="0" textFill="WHITE"><font><Font name="System Bold" size="18.0" /></font></Label>
                         <Label text="X" textFill="#67e8f9"><font><Font name="System Bold" size="14.0" /></font></Label>
                      </children>
@@ -91,33 +91,24 @@
                   <DropShadow color="#ffffff4d" height="40.0" radius="20.0" width="40.0" />
                </effect>
                <children>
-<Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="75" prefWidth="75" style="         -fx-background-color: transparent;         -fx-border-color: rgba(255,255,255,0.4);         -fx-border-width: 1;         -fx-border-radius: 6;          -fx-background-insets: 0;         -fx-border-insets: 0;         -fx-padding: 0;          -fx-font-size: 38;         -fx-font-weight: bold;         -fx-text-fill: #67e8f9;          -fx-focus-color: transparent;         -fx-faint-focus-color: transparent;     " text="X" GridPane.columnIndex="0" GridPane.rowIndex="0">
+<Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btn00" prefHeight="75" prefWidth="75" style="         -fx-background-color: transparent;         -fx-border-color: rgba(255,255,255,0.4);         -fx-border-width: 1;         -fx-border-radius: 6;          -fx-background-insets: 0;         -fx-border-insets: 0;         -fx-padding: 0;          -fx-font-size: 38;         -fx-font-weight: bold;         -fx-text-fill: #67e8f9;          -fx-focus-color: transparent;         -fx-faint-focus-color: transparent;     " text="X" GridPane.columnIndex="0" GridPane.rowIndex="0">
     <effect>
         <DropShadow color="#67e8f9" radius="5" />
     </effect>
 </Button>
-             <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="1" />
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent; -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6; -fx-background-insets: 0;-fx-border-insets: 0; -fx-padding: 0; -fx-font-size: 38; -fx-font-weight: bold; -fx-font-family: 'Arial';-fx-text-fill: #f9a8d4;-fx-focus-color: transparent;  -fx-faint-focus-color: transparent; -fx-cursor: hand;" text="O" GridPane.columnIndex="1" GridPane.rowIndex="1">
+             <Button mnemonicParsing="false" onAction="#btn10" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#btn20" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#btn01" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="1" />
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btn11" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent; -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6; -fx-background-insets: 0;-fx-border-insets: 0; -fx-padding: 0; -fx-font-size: 38; -fx-font-weight: bold; -fx-font-family: 'Arial';-fx-text-fill: #f9a8d4;-fx-focus-color: transparent;  -fx-faint-focus-color: transparent; -fx-cursor: hand;" text="O" GridPane.columnIndex="1" GridPane.rowIndex="1">
                        <effect><DropShadow color="#f9a8d4" radius="5" /></effect>
                      <font>
                         <Font size="38.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="2" />
-                  <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" minHeight="75.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent; -fx-background-radius: 0; -fx-cursor: hand; -fx-font-weight: bold; -fx-font-family: 'Arial'; -fx-text-fill: #67e8f9; -fx-background-insets: 0; -fx-border-insets: 0; -fx-padding: 0; fx-focus-color: transparent; -fx-faint-focus-color: transparent;" text="X" GridPane.columnIndex="0" GridPane.rowIndex="0">
-                       <effect><DropShadow color="#67e8f9" radius="5" /></effect>
-                     <font>
-                        <Font size="38.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#btn21" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#btn02" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#btn12" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#btn22" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
                <VBox.margin>
                   <Insets top="13.0" />
