--- a/src/main/resources/com/mycompany/tictactoe/views/GamePlay.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/GamePlay.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -73,47 +75,54 @@
                   </VBox>
                </children>
             </HBox>
-            <GridPane fx:id="gameGrid" alignment="CENTER" hgap="5.0" maxHeight="350.0" maxWidth="350.0" prefHeight="295.0" prefWidth="295.0" style="-fx-background-color: transparent; -fx-background-radius: 15; -fx-border-color: rgba(255,255,255,0.2); -fx-border-radius: 10; -fx-border-width: 2;" vgap="6.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-               <effect>
-                  <DropShadow color="#ffffff4d" height="40.0" radius="20.0" width="40.0" />
-               </effect>
-               <children>
-<Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btn00" prefHeight="75" prefWidth="75" style="         -fx-background-color: transparent;         -fx-border-color: rgba(255,255,255,0.4);         -fx-border-width: 1;         -fx-border-radius: 6;          -fx-background-insets: 0;         -fx-border-insets: 0;         -fx-padding: 0;          -fx-font-size: 38;         -fx-font-weight: bold;         -fx-text-fill: #67e8f9;          -fx-focus-color: transparent;         -fx-faint-focus-color: transparent;     " text="X" GridPane.columnIndex="0" GridPane.rowIndex="0">
-    <effect>
-        <DropShadow color="#67e8f9" radius="5" />
-    </effect>
-</Button>
-             <Button mnemonicParsing="false" onAction="#btn10" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#btn20" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#btn01" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="1" />
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btn11" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent; -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6; -fx-background-insets: 0;-fx-border-insets: 0; -fx-padding: 0; -fx-font-size: 38; -fx-font-weight: bold; -fx-font-family: 'Arial';-fx-text-fill: #f9a8d4;-fx-focus-color: transparent;  -fx-faint-focus-color: transparent; -fx-cursor: hand;" text="O" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                       <effect><DropShadow color="#f9a8d4" radius="5" /></effect>
-                     <font>
-                        <Font size="38.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#btn21" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#btn02" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#btn12" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#btn22" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-               </children>
+            <StackPane>
                <VBox.margin>
                   <Insets top="13.0" />
                </VBox.margin>
-            </GridPane>
+               <children>
+                  <GridPane fx:id="gameGrid" alignment="CENTER" hgap="5.0" maxHeight="350.0" maxWidth="350.0" prefHeight="295.0" prefWidth="295.0" style="-fx-background-color: transparent; -fx-background-radius: 15; -fx-border-color: rgba(255,255,255,0.2); -fx-border-radius: 10; -fx-border-width: 2;" vgap="6.0">
+                    <columnConstraints>
+                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <effect>
+                        <DropShadow color="#ffffff4d" height="40.0" radius="20.0" width="40.0" />
+                     </effect>
+                     <children>
+      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btn00" prefHeight="75" prefWidth="75" style="         -fx-background-color: transparent;         -fx-border-color: rgba(255,255,255,0.4);         -fx-border-width: 1;         -fx-border-radius: 6;          -fx-background-insets: 0;         -fx-border-insets: 0;         -fx-padding: 0;          -fx-font-size: 38;         -fx-font-weight: bold;         -fx-text-fill: #67e8f9;          -fx-focus-color: transparent;         -fx-faint-focus-color: transparent;     " text="X" GridPane.columnIndex="0" GridPane.rowIndex="0">
+          <effect>
+              <DropShadow color="#67e8f9" radius="5" />
+          </effect>
+      </Button>
+                   <Button mnemonicParsing="false" onAction="#btn10" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#btn20" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#btn01" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="1" />
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btn11" prefHeight="75.0" prefWidth="75.0" style=" -fx-background-color: transparent; -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6; -fx-background-insets: 0;-fx-border-insets: 0; -fx-padding: 0; -fx-font-size: 38; -fx-font-weight: bold; -fx-font-family: 'Arial';-fx-text-fill: #f9a8d4;-fx-focus-color: transparent;  -fx-faint-focus-color: transparent; -fx-cursor: hand;" text="O" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                             <effect>
+                              <DropShadow color="#f9a8d4" radius="5" />
+                           </effect>
+                           <font>
+                              <Font size="38.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#btn21" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onAction="#btn02" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#btn12" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onAction="#btn22" prefHeight="75.0" prefWidth="75.0" style="-fx-background-color: transparent;  -fx-border-color: rgba(255,255,255,0.4);  -fx-border-width: 1; -fx-border-radius: 6;  -fx-background-insets: 0; -fx-border-insets: 0;   -fx-padding: 0; -fx-font-size: 38;   -fx-font-weight: bold;   -fx-text-fill: #67e8f9; -fx-focus-color: transparent;  -fx-faint-focus-color: transparent;" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                     </children>
+                  </GridPane>
+                  <Pane fx:id="winningLinePane" maxHeight="350.0" maxWidth="350.0" mouseTransparent="true" pickOnBounds="false" prefHeight="295.0" prefWidth="295.0" />
+               </children>
+            </StackPane>
 
             <!-- Bottom Buttons -->
             <HBox alignment="CENTER" spacing="15.0">
