--- a/src/main/resources/com/mycompany/tictactoe/views/users_list.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/users_list.fxml
@@ -11,12 +11,11 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100%);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.tictactoe.controllers.Users_listController">
+
    <center>
       <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -29,84 +28,64 @@
                               <Image url="@../../../../images/people.png" />
                            </image>
                            <HBox.margin>
-                              <Insets right="20.0" />
+                              <Insets right="20.0" top="0.0" bottom="0.0" left="0.0"/>
                            </HBox.margin>
                         </ImageView>
-                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Online Playres">
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Online Players">
                            <font>
                               <Font size="30.0" />
                            </font>
                         </Text>
                      </children>
                   </HBox>
-                  <Text fx:id="numberOfAvilablePlayers" fill="#fccee8" strokeType="OUTSIDE" strokeWidth="0.0" text="8 Players currntly online" textAlignment="CENTER">
+                  <Text fx:id="numberOfAvilablePlayers" fill="#fccee8" strokeType="OUTSIDE" strokeWidth="0.0" text="0 Players currently online" textAlignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Text>
                </children>
+               <padding>
+                  <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
+               </padding>
             </VBox>
+
             <StackPane prefHeight="587.0" prefWidth="860.0">
                <StackPane.margin>
-                  <Insets bottom="70.0" left="20.0" right="20.0" top="120.0" />
+                  <Insets bottom="70.0" left="20.0" right="20.0" top="120.0"/>
                </StackPane.margin>
                <children>
-                  <ScrollPane fitToWidth="true" pannable="true" prefHeight="390.0" prefWidth="860.0" style="-fx-background-color: transparent; -fx-border-color: rgba(255,255,255,0.7); -fx-border-radius: 15;">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="591.0" prefWidth="869.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100%); -fx-border-radius: 15;">
+                  <ScrollPane fx:id="scrollPane" fitToWidth="true" pannable="true" prefHeight="390.0" prefWidth="860.0" style="-fx-background-color: transparent; -fx-border-color: rgba(255,255,255,0.7); -fx-border-radius: 15;">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="591.0" prefWidth="869.0" style="-fx-background-color: transparent;">
                            <children>
-                              <VBox prefHeight="591.0" prefWidth="855.0" style="-fx-background-color: transparent; -fx-border-radius: 15;">
-                                 <children>
-                                    <HBox fx:id="itemAvilablePlayer" alignment="CENTER_LEFT" prefHeight="65.0" prefWidth="200.0" style="-fx-background-color: rgba(255,255,255,0.15); -fx-border-radius: 15; -fx-background-radius: 15; -fx-border-color: rgba(255,255,255,0.3);">
-                                       <children>
-                                          <Circle fill="#1fff52" radius="5.0" stroke="#1fff52" strokeType="INSIDE">
-                                             <HBox.margin>
-                                                <Insets left="16.0" right="13.0" />
-                                             </HBox.margin>
-                                          </Circle>
-                                          <Text fx:id="avilable_player" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1">
-                                             <font>
-                                                <Font size="14.0" />
-                                             </font>
-                                          </Text>
-                                          <Region prefHeight="78.0" prefWidth="640.0" />
-                                          <Button alignment="CENTER" mnemonicParsing="false" onAction="#requestBtn" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(to right, #00c6ff, #0072ff); -fx-border-color: #53EAFD; -fx-background-radius: 7; -fx-border-radius: 7;" text="request" textFill="WHITE">
-                                             <HBox.margin>
-                                                <Insets right="16.0" />
-                                             </HBox.margin>
-                                          </Button>
-                                       </children>
-                                       <opaqueInsets>
-                                          <Insets />
-                                       </opaqueInsets>
-                                       <VBox.margin>
-                                          <Insets bottom="10.0" top="20.0" />
-                                       </VBox.margin>
-                                    </HBox>
-                                 </children>
+                              <!-- كل اللاعبين هيتضافوا هنا ديناميكي -->
+                              <VBox fx:id="playersContainer" prefWidth="855.0" spacing="10">
                                  <padding>
-                                    <Insets left="20.0" right="20.0" />
+                                    <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
                                  </padding>
                               </VBox>
                            </children>
                         </AnchorPane>
-                    </content>
+                     </content>
                   </ScrollPane>
                </children>
             </StackPane>
+
             <Button alignment="CENTER" mnemonicParsing="false" onAction="#BackToMenu" prefHeight="35.0" prefWidth="130.0" style="-fx-background-color: rgba(255,255,255,0.15); -fx-border-color: rgba(255,255,255,0.7); -fx-border-radius: 5;" text="Back To Menu" StackPane.alignment="BOTTOM_CENTER">
                <StackPane.margin>
-                  <Insets bottom="20.0" />
+                  <Insets bottom="20.0" top="0.0" left="0.0" right="0.0"/>
                </StackPane.margin>
                <graphic>
                   <ImageView fitHeight="22.0" fitWidth="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../images/back.png" />
+                        <Image url="@../../../../images/back.png"/>
                      </image>
                   </ImageView>
                </graphic>
             </Button>
+
          </children>
       </StackPane>
    </center>
+
 </BorderPane>
